# SCodes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSCodes.cmake  FindStb.cmake  FindZXing.cmake
doc/: detailsQt6.md
examples/: QmlBarcodeReader_v1.7z
examples/BScanner/: CMakeLists.txt  main.cpp  qml.qrc
examples/BScanner/qml/: qt5main.qml  qt6main.qml
examples/QmlBarcodeGenerator/: CMakeLists.txt  ColorController.cpp  ColorController.h  QmlBarcodeGenerator.pro  android.7z  main.cpp  qml.qrc
examples/QmlBarcodeGenerator/android/: AndroidManifest.xml  build.gradle
examples/QmlBarcodeGenerator/qml/: CButton.qml  CComboBox.qml  CTextField.qml  GeneratorPage.qml  Theme.qml
examples/QmlBarcodeReader/: .gitignore  CMakeLists.txt  QmlBarcodeReader.pro  Qt5qml.qrc  Qt6qml.qrc  main.cpp  qml.qrc
examples/QmlBarcodeReader/android/: AndroidManifest.xml  build.gradle  gradle.properties
examples/QmlBarcodeReader/cmake/: Locations.cmake
examples/QmlBarcodeReader/ios/: Info.plist
examples/QmlBarcodeReader/qml/: CButton.qml  CComboBox.qml  CTextField.qml  GeneratorPage.qml  Qt5ScannerOverlay.qml  Qt5ScannerPage.qml  Qt6ScannerOverlay.qml  Qt6ScannerPage.qml  ScannerOverlay.qml  ScannerPage.qml  Theme.qml
examples/QmlBarcodeReader/qrScanner/: QRDecoder.cpp  QRDecoder.h  QRScannerFilter.cpp  QRScannerFilter.h  QrDecoder.cpp  QrDecoder.h  QrScannerFilter.cpp  QrScannerFilter.h
examples/cmake-examples/QmlBarcodeGenerator/: .gitignore  CMakeLists.txt  main.cpp  qml.qrc
examples/cmake-examples/QmlBarcodeGenerator/cmake/: Locations.cmake
examples/cmake-examples/QmlBarcodeReader/: CMakeLists.txt  main.cpp
examples/cmake-examples/QmlBarcodeReader/cmake/: Locations.cmake
examples/qmake-examples/QmlBarcodeGenerator/: main.cpp
examples/qmake-examples/QmlBarcodeGenerator/android/: AndroidManifest.xml
examples/qmake-examples/QmlBarcodeGenerator/qml/: GeneratorPage.qml
examples/qmake-examples/QmlBarcodeReader/: QmlBarcodeReader.pro  main.cpp  qml.qrc
examples/qmake-examples/QmlBarcodeReader/android/: AndroidManifest.xml
src/: BarcodeDecoder.cpp  BarcodeDecoder.h  BarcodeFilter.cpp  BarcodeFilter.h  CMakeLists.txt  SBarcodeDecoder.cpp  SBarcodeDecoder.h  SBarcodeFilter.cpp  SBarcodeFilter.h  SBarcodeFilterQt6.cpp  SBarcodeFilterQt6.h  SBarcodeFormat.cpp  SBarcodeFormat.h  SBarcodeGenerator.cpp  SBarcodeGenerator.h  SBarcodeReader.pri  SBarcodeScanner.cpp  SBarcodeScanner.h  SCamera.cpp  SCamera.h  SCodes.pri  qvideoframeconversionhelper_p.h
src/private/: debug.h
